--- a/src/main/resources/templates/admin-panel.html
+++ b/src/main/resources/templates/admin-panel.html
@@ -10,20 +10,27 @@
 <div th:replace="fragments/common.html::header"></div>
 
 <div class="grid place-items-center">
-    <div class="md:block">
-        <h1 class="header" th:text="#{admin_panel}"></h1>
-        <div class="flex flex-row">
+    <div class="inline-flex-auto flex-row flex-wrap justify-center justify-items-center mx-3 max-w-sm">
+        <h1 class="header basis-full text-center break-normal" th:text="#{admin_panel}"></h1>
+        <div class="btn-group">
             <a th:href="@{{context_path}/{locale}/admin/add-user(
         locale=${@localeContextHolderWrapper.getLocaleContext().getLocale()},
         context_path=${#httpServletRequest.getContextPath()})}"
-            >
-                <button type="button" class="btn-primary" th:text="#{create_user}"/>
+               class="w-1/3">
+                <button type="button" class="btn-primary min-w-fit w-full" th:text="#{create_user}"/>
             </a>
             <a th:href="@{{context_path}/{locale}/admin/users-list(
                 locale=${@localeContextHolderWrapper.getLocaleContext().getLocale()},
                 context_path=${#httpServletRequest.getContextPath()})}"
-            >
-                <button type="button" class="btn-primary" th:text="#{user_list}"/>
+               class="w-1/3">
+                <button type="button" class="btn-primary min-w-fit w-full" th:text="#{user_list}"/>
+            </a>
+
+            <a th:href="@{{context_path}/{locale}/admin/users-list-zepsute(
+                locale=${@localeContextHolderWrapper.getLocaleContext().getLocale()},
+                context_path=${#httpServletRequest.getContextPath()})}"
+               class="w-1/3">
+                <button type="button" class="btn-primary min-w-fit w-full" th:text="zepsute"/>
             </a>
         </div>
     </div>
