--- a/src/main/resources/templates/error/400.html
+++ b/src/main/resources/templates/error/400.html
@@ -5,21 +5,21 @@
     <title>Title</title>
     <link rel="stylesheet" th:href="@{/css/main.css}"/>
 </head>
-<body>
+<body class="background">
 
-<div class="md:block">
-    <h1 class="header" th:text="#{create_user}"></h1>
-    <div class="flex flex-row">
-        <a
-                th:href="@{{context_path}/{locale}/admin(
-                locale=${@localeContextHolderWrapper.getLocaleContext().getLocale()},
-                context_path=${#httpServletRequest.getContextPath()})}"
-        >
-            <button type="button" class="btn-primary" th:text="#{return}"/>
+<div th:replace="fragments/common.html::header"></div>
 
-        </a>
-    </div>
+
+<div th:replace="fragments/error.html::error-page(~{::#error_message})">
+    <p id="error_message"
+       class="mb-3 basis-full text-center
+                text-gray-700 dark:text-gray-200 break-normal font-bold leading-none text-2xl"
+       th:text="#{error_400_text}">
+    </p>
 </div>
+
+<div th:replace="fragments/common.html::footer"> </div>
+
 
 </body>
 </html>
