--- a/src/main/resources/templates/admin-panel.html
+++ b/src/main/resources/templates/admin-panel.html
@@ -9,7 +9,7 @@
 
 <div th:replace="fragments/common.html::header"></div>
 
-<div class="grid place-items-center">
+<div class="grid-center">
     <div class="inline-flex-auto flex-row flex-wrap justify-center justify-items-center mx-3 max-w-sm">
         <h1 class="header basis-full text-center break-normal" th:text="#{admin_panel}"></h1>
         <div class="btn-group">
