--- a/src/main/resources/templates/fragments/error.html
+++ b/src/main/resources/templates/fragments/error.html
@@ -12,8 +12,7 @@
 <div class="grid place-items-center">
     <div class="inline-flex-auto flex-row flex-wrap justify-center justify-items-center mx-3 max-w-sm">
         <p id="error_message"
-                class="mb-3 basis-full text-center
-                text-gray-700 dark:text-gray-200 break-normal font-bold leading-none text-2xl"
+                class="error-message"
                 th:text="#{error_404_text}">
         </p>
         <div class="btn-group">
