--- a/src/main/resources/templates/user-info.html
+++ b/src/main/resources/templates/user-info.html
@@ -26,8 +26,8 @@
     <form action="#" class="w-full max-w-3xl"
           method="post" th:action="@{/admin/user-info/{id}(id = ${accountInfoEntity.getId()})}"
           th:object="${DTO}">
-        <div class="flex flex-wrap -mx-3 mb-4">
-            <div class="w-full sm:w-1/2 px-3 mb-0">
+        <div class="div-with-two-columns">
+            <div class="one-column-of-two">
                 <label class="inputLabel"
                        for="grid-first-name" th:text="#{first_name}"/>
                 <input class="input editable-input" disabled="disabled"
@@ -36,7 +36,7 @@
                     <li class="form-error" th:each="err : ${#fields.errors('firstName')}" th:text="#{${err}}"/>
                 </ul>
             </div>
-            <div class="w-full sm:w-1/2  px-3">
+            <div class="one-column-of-two">
                 <label class="inputLabel"
                        for="grid-last-name" th:text="#{last_name}"/>
                 <input class="input editable-input" disabled="disabled"
@@ -46,7 +46,7 @@
                 </ul>
             </div>
         </div>
-        <div class="flex flex-wrap -mx-3 mb-4 px-3">
+        <div class="div-with-two-columns px-3">
             <label class="inputLabel"
                    for="grid-password" th:text="#{email}"/>
             <input class="input editable-input" disabled="disabled"
@@ -55,8 +55,8 @@
                 <li class="form-error" th:each="err : ${#fields.errors('email')}" th:text="#{${err}}"/>
             </ul>
         </div>
-        <div class="flex flex-wrap -mx-3 mb-4">
-            <div class="w-full sm:w-1/2  px-3 mb-0">
+        <div class="div-with-two-columns">
+            <div class="one-column-of-two">
                 <label class="inputLabel" for="grid-enabled" th:text="#{enabled}"/>
                 <div class="relative">
                     <select class="input editable-input block"
@@ -76,23 +76,22 @@
                     <li class="form-error" th:each="err : ${#fields.errors('enabled')}" th:text="#{${err}}"/>
                 </ul>
             </div>
-            <div class="w-full sm:w-1/2 px-3 mb-0">
+            <div class="one-column-of-two">
                 <label class="inputLabel" for="grid-confirmed" th:text="#{confirmed}"/>
                 <input class="input"
                        disabled="disabled" id="grid-confirmed" th:value="#{${accountInfoEntity.isConfirmed()}}"
                        type="text"/>
             </div>
         </div>
-        <div class="flex flex-wrap -mx-3 mb-4">
-            <div class="w-full sm:w-1/2  px-3 mb-0">
+        <div class="div-with-two-columns">
+            <div class="one-column-of-two">
                 <label class="inputLabel"
                        for="grid-last_login" th:text="#{last_login}"/>
                 <input class="input"
                        disabled="disabled" id="grid-last_login" th:value="${accountInfoEntity.getLastLogin()}"
                        type="text"/>
-                <!--<p class="text-red-500 text-xs italic">Please fill out this field.</p>-->
             </div>
-            <div class="w-full sm:w-1/2 px-3">
+            <div class="one-column-of-two">
                 <label class="inputLabel"
                        for="grid-last_login_ip" th:text="#{last_login_ip}"/>
                 <input class="input"
@@ -100,8 +99,8 @@
                        type="text"/>
             </div>
         </div>
-        <div class="flex flex-wrap -mx-3 mb-4">
-            <div class="w-full sm:w-1/2 px-3 mb-0">
+        <div class="div-with-two-columns">
+            <div class="one-column-of-two">
                 <label class="inputLabel"
                        for="grid-last_fail_login" th:text="#{last_fail_login}"/>
                 <input class="input"
@@ -109,7 +108,7 @@
                        th:value="${accountInfoEntity.getLastFailLogin()}"
                        type="text">
             </div>
-            <div class="w-full sm:w-1/2 px-3">
+            <div class="one-column-of-two">
                 <label class="inputLabel"
                        for="grid-last_fail_login_ip" th:text="#{last_fail_login_ip}"/>
                 <input class="input"
@@ -118,8 +117,8 @@
                        type="text">
             </div>
         </div>
-        <div class="flex flex-wrap -mx-3 mb-4">
-            <div class="w-full sm:w-1/2 px-3 mb-0">
+        <div class="div-with-two-columns">
+            <div class="one-column-of-two">
                 <label class="inputLabel"
                        for="grid-last_password_change" th:text="#{last_password_change}"/>
                 <input class="input"
@@ -127,7 +126,7 @@
                        th:value="${accountInfoEntity.getLastPasswordChange()}"
                        type="text">
             </div>
-            <div class="w-full sm:w-1/2 px-3">
+            <div class="one-column-of-two">
                 <label class="inputLabel"
                        for="grid-last_password_change_ip" th:text="#{last_password_change_ip}"/>
                 <input class="input"
@@ -136,7 +135,7 @@
                        type="text">
             </div>
         </div>
-        <div class="w-full place-items-center grid">
+        <div class="w-full grid-center">
             <p class="form-success mb-5" th:if="${showSuccess != null}"
                th:text="#{successfully_edited_user_info}"/>
             <input class="btn-primary w-64 w-full" hidden="hidden" id="submit-button" type="submit"/>
