--- a/src/main/resources/static/css/style.tailwind.css
+++ b/src/main/resources/static/css/style.tailwind.css
@@ -35,4 +35,20 @@
         @apply text-base text-green-700 dark:text-green-400;
     }
 
+    .one-column-of-two {
+        @apply w-full sm:w-1/2 px-3 mb-0;
+    }
+
+    .div-with-two-columns {
+        @apply flex flex-wrap -mx-3 mb-4;
+    }
+
+    .grid-center {
+        @apply place-items-center grid;
+    }
+
+    .error-message {
+        @apply mb-3 basis-full text-center text-gray-700 dark:text-gray-200 break-normal font-bold leading-none text-2xl;
+    }
+
 }
