--- a/src/main/resources/templates/user-info.html
+++ b/src/main/resources/templates/user-info.html
@@ -138,8 +138,8 @@
         <div class="w-full grid-center">
             <p class="form-success mb-5" th:if="${showSuccess != null}"
                th:text="#{successfully_edited_user_info}"/>
-            <input class="btn-primary w-64 w-full" hidden="hidden" id="submit-button" type="submit"/>
-            <button class="btn-primary w-64 w-full" id="edit-button" th:text="#{edit}" type="button"/>
+            <input class="btn-primary px-10" hidden="hidden" id="submit-button" type="submit"/>
+            <button class="btn-primary px-10" id="edit-button" th:text="#{edit}" type="button"/>
         </div>
     </form>
 </div>
