remove new line

--- a/src/main/resources/static/css/style.tailwind.css
+++ b/src/main/resources/static/css/style.tailwind.css
@@ -52,9 +52,7 @@
     }
 
     .table-col {
-        @apply max-w-[200px]
-        break-all
-        py-3 px-6;
+        @apply max-w-[200px] break-all py-3 px-6;
     }
 
 }
