--- a/src/main/resources/templates/admin-panel.html
+++ b/src/main/resources/templates/admin-panel.html
@@ -13,7 +13,7 @@
     <div class="inline-flex-auto flex-row flex-wrap justify-center justify-items-center mx-3 max-w-sm">
         <h1 class="header basis-full text-center break-normal" th:text="#{admin_panel}"></h1>
         <div class="btn-group">
-            <a th:href="@{{context_path}/{locale}/admin/add-user(
+            <a th:href="@{{context_path}/{locale}/admin/create-account(
         locale=${@localeContextHolderWrapper.getLocaleContext().getLocale()},
         context_path=${#httpServletRequest.getContextPath()})}"
                class="w-1/3">
@@ -25,6 +25,7 @@
                class="w-1/3">
                 <button type="button" class="btn-primary min-w-fit w-full" th:text="#{user_list}"/>
             </a>
+
 
             <a th:href="@{{context_path}/{locale}/admin/users-list-zepsute(
                 locale=${@localeContextHolderWrapper.getLocaleContext().getLocale()},
