--- a/src/main/resources/templates/admin-panel.html
+++ b/src/main/resources/templates/admin-panel.html
@@ -11,7 +11,7 @@
 
 <div class="grid-center">
     <div class="inline-flex-auto flex-row flex-wrap justify-center justify-items-center mx-3 max-w-sm">
-        <h1 class="header basis-full text-center break-normal" th:text="#{admin_panel}"></h1>
+        <h1 class="header basis-full text-center break-normal mt-5" th:text="#{admin_panel}"></h1>
         <div class="btn-group">
             <a th:href="@{{context_path}/{locale}/admin/create-account(
         locale=${@localeContextHolderWrapper.getLocaleContext().getLocale()},
@@ -38,10 +38,6 @@
                class="w-1/3">
                 <button type="button" class="btn-primary min-w-fit w-full" th:text="#{logout}"/>
             </a>
-
-
-
-
         </div>
     </div>
 </div>
