--- a/src/main/resources/templates/users-list.html
+++ b/src/main/resources/templates/users-list.html
@@ -11,9 +11,9 @@
 <div th:replace="fragments/common.html::header"></div>
 
 <div class="grid-center">
-    <h2 class="text-3xl uppercase header" th:text="#{user_list}"></h2>
+    <h2 class="header" th:text="#{user_list}"/>
     <div class="overflow-x-auto relative shadow-md sm:rounded-lg">
-        <table class="w-full text-sm text-left text-gray-500 dark:text-gray-400"
+        <table class="w-full text-sm text-left text-gray-500 dark:text-gray-400 min-w-[600px]"
                th:if="${not#lists.isEmpty(users)}">
             <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
             <tr>
@@ -27,9 +27,8 @@
             <tbody>
             <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600"
                 th:each="user : ${users}">
-                <th class="table-col font-medium text-gray-900 whitespace-nowrap dark:text-white" scope="row"
-                    th:text="${user.id}"/>
-                <td class="table-col" th:text="${user.email}"/>
+                <td class="table-col font-medium font-bold" th:text="${user.id}"/>
+                <td class="table-col break-all" th:text="${user.email}"/>
                 <td class="table-col"
                     th:text="${user.userInfoEntity.firstName} + ' ' + ${user.userInfoEntity.lastName}"/>
                 <td class="table-col">
@@ -37,7 +36,7 @@
                         <li th:each="level : ${user.getAccessLevels()}" th:text="#{${level.getLevel().toString()}}"/>
                     </ul>
                 </td>
-                <td class="table-col text-right">
+                <td class="table-col">
                     <a th:href="@{{context_path}/{locale}/admin/user-info/{id}(
                                             locale=${@localeContextHolderWrapper.getLocaleContext().getLocale()},
                                             context_path=${#httpServletRequest.getContextPath()},
