--- a/src/main/resources/templates/fragments/common.html
+++ b/src/main/resources/templates/fragments/common.html
@@ -9,16 +9,14 @@
 
 <div class="flex flex-row" th:fragment="header">
     <div class="w-full mt-4 mx-4">
-        <!--    <a th:replace="fragments/link.html::admin-link(~{::button})">-->
-        <!--        <button class="btn-primary" th:text="#{return}" type="button"/>-->
-        <!--    </a>-->
         <nav aria-label="Breadcrumb" class="flex">
             <ol class="inline-flex items-center space-x-1 md:space-x-3">
                 <svg class="w-4 h-4 mr-2" fill="currentColor" viewBox="0 0 20 20"
                      xmlns="http://www.w3.org/2000/svg">
                     <path d="M10.707 2.293a1 1 0 00-1.414 0l-7 7a1 1 0 001.414 1.414L4 10.414V17a1 1 0 001 1h2a1 1 0 001-1v-2a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 001 1h2a1 1 0 001-1v-6.586l.293.293a1 1 0 001.414-1.414l-7-7z"></path>
                 </svg>
-                <li th:each="breadcrumbs : ${@breadcrumbsHelper.getBreadcrumbs(#httpServletRequest, @localeContextHolderWrapper)}" class="inline-flex items-center">
+                <li class="inline-flex items-center"
+                    th:each="breadcrumbs : ${@breadcrumbsHelper.getBreadcrumbs(#httpServletRequest, @localeContextHolderWrapper)}">
                     <a class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-gray-900 dark:text-gray-400 dark:hover:text-white"
                        th:href="@{${breadcrumbs.getValue()}}" th:text="${breadcrumbs.getKey()}">
                     </a>
