--- a/src/main/resources/static/css/style.tailwind.css
+++ b/src/main/resources/static/css/style.tailwind.css
@@ -59,4 +59,16 @@
         visibility: hidden;
     }
 
+    .table-full {
+        @apply w-full text-sm text-left text-gray-500 dark:text-gray-400 min-w-[600px];
+    }
+
+    .table-head {
+        @apply text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400;
+    }
+
+    .table-row {
+        @apply bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600;
+    }
+
 }
