--- a/src/main/resources/templates/create-account.html
+++ b/src/main/resources/templates/create-account.html
@@ -9,7 +9,7 @@
 
 <div th:replace="fragments/common.html::header"></div>
 
-<div class="mb-5 grid place-items-center mx-3">
+<div class="grid-center">
     <h2 class="header"
         th:text="#{create_user}"/>
     <form action="#" class="w-full max-w-md"
