--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,31 +7,33 @@
 </head>
 <body class="background">
 
-<div class="mb-5 grid place-items-center mx-3">
-    <h2 class="header" th:text="#{login}"/>
-    <form action="#" class="w-full max-w-sm"
-          method="post" th:action="@{/admin/login}"
-          th:object="${DTO}">
-        <div class="div-with-two-columns">
-            <label class="inputLabel"
-                   for="form-email" th:text="#{email}"/>
-            <input class="input" id="form-email" th:field="*{email}" type="email"/>
-            <ul th:if="${#fields.hasErrors('email')}">
-                <li class="form-error" th:each="err : ${#fields.errors('email')}" th:text="#{${err}}"/>
-            </ul>
-        </div>
-        <div class="div-with-two-columns">
-            <label class="inputLabel"
-                   for="form-password" th:text="#{password}"/>
-            <input class="input" id="form-password" th:field="*{password}" type="password"/>
-            <ul th:if="${#fields.hasErrors('password')}">
-                <li class="form-error" th:each="err : ${#fields.errors('password')}" th:text="#{${err}}"/>
-            </ul>
-        </div>
-        <div class="w-full grid-center">
-            <input class="btn-primary w-64 w-full" id="submit-button" type="submit"/>
-        </div>
-    </form>
+<div class="grid-center">
+    <div class="mb-5">
+        <h2 class="header" th:text="#{login}"/>
+        <form action="#" class="w-full max-w-sm"
+              method="post" th:action="@{/admin/login}"
+              th:object="${DTO}">
+            <div class="div-with-two-columns">
+                <label class="inputLabel"
+                       for="form-email" th:text="#{email}"/>
+                <input class="input" id="form-email" th:field="*{email}" type="email"/>
+                <ul th:if="${#fields.hasErrors('email')}">
+                    <li class="form-error" th:each="err : ${#fields.errors('email')}" th:text="#{${err}}"/>
+                </ul>
+            </div>
+            <div class="div-with-two-columns">
+                <label class="inputLabel"
+                       for="form-password" th:text="#{password}"/>
+                <input class="input" id="form-password" th:field="*{password}" type="password"/>
+                <ul th:if="${#fields.hasErrors('password')}">
+                    <li class="form-error" th:each="err : ${#fields.errors('password')}" th:text="#{${err}}"/>
+                </ul>
+            </div>
+            <div class="w-full grid-center">
+                <input class="btn-primary w-64 w-full" id="submit-button" type="submit"/>
+            </div>
+        </form>
+    </div>
 </div>
 
 <div th:replace="fragments/common.html::footer">
