--- a/src/main/resources/templates/user-info.html
+++ b/src/main/resources/templates/user-info.html
@@ -20,7 +20,7 @@
 
 <div th:replace="fragments/common.html::header"></div>
 
-<div class="mb-5 grid place-items-center mx-3">
+<div class="grid-center">
     <h2 class="header" th:text="#{user_info}"/>
     <form action="#" class="w-full max-w-3xl"
           method="post" th:action="@{/admin/user-info/{id}(id = ${accountInfoEntity.getId()})}"
