--- a/src/main/resources/templates/error/401.html
+++ b/src/main/resources/templates/error/401.html
@@ -12,8 +12,7 @@
 <!--TODO: dodac link do logowania-->
 <div th:replace="fragments/error.html::error-page(~{::#error_message})">
     <p id="error_message"
-       class="mb-3 basis-full text-center
-                text-gray-700 dark:text-gray-200 break-normal font-bold leading-none text-2xl"
+       class="error-message"
        th:text="#{error_401_text}">
     </p>
 </div>
