--- a/src/main/resources/templates/admin-panel.html
+++ b/src/main/resources/templates/admin-panel.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" th:href="@{/css/main.css}"/>
+    <script>
+        // var a = document.body.appendChild(
+        //     document.createElement("a")
+        // );
+        // let svgCode = document.getElementById("doPobrania").outerHTML;
+        // a.download = "home.svg";
+        // a.href = "data:image/svg+xml," + svgCode;
+        // a.click();
+    </script>
 </head>
 <body class="background">
 
