--- a/src/main/resources/templates/fragments/common.html
+++ b/src/main/resources/templates/fragments/common.html
@@ -11,21 +11,19 @@
     <div class="w-full mt-4 mx-4">
         <nav aria-label="Breadcrumb" class="flex">
             <ol class="breadcrumbs inline-flex items-center space-x-1 md:space-x-3">
-                <svg class="w-4 h-4 mr-2" fill="currentColor" viewBox="0 0 20 20"
-                     xmlns="http://www.w3.org/2000/svg">
-                    <path d="M10.707 2.293a1 1 0 00-1.414 0l-7 7a1 1 0 001.414 1.414L4 10.414V17a1 1 0 001 1h2a1 1 0 001-1v-2a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 001 1h2a1 1 0 001-1v-6.586l.293.293a1 1 0 001.414-1.414l-7-7z"></path>
-                </svg>
+                <img th:src="@{images/home.svg}" class="w-4 h-4 mr-2">
                 <li class="inline-flex items-center"
                     th:each="breadcrumbs : ${@breadcrumbsHelper.getBreadcrumbs(#httpServletRequest, @localeContextHolderWrapper)}">
                     <a class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-gray-900 dark:text-gray-400 dark:hover:text-white"
                        th:href="@{${breadcrumbs.getValue()}}" th:text="${breadcrumbs.getKey()}">
                     </a>
-                    <svg class="w-6 h-6 text-gray-400" fill="currentColor" viewBox="0 0 20 20"
-                         xmlns="http://www.w3.org/2000/svg">
-                        <path clip-rule="evenodd"
-                              d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
-                              fill-rule="evenodd"></path>
-                    </svg>
+<!--                    <svg class="w-6 h-6 text-gray-400" fill="currentColor" viewBox="0 0 20 20"-->
+<!--                         xmlns="http://www.w3.org/2000/svg">-->
+<!--                        <path clip-rule="evenodd"-->
+<!--                              d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"-->
+<!--                              fill-rule="evenodd"></path>-->
+<!--                    </svg>-->
+                    <img th:src="@{images/arrow.svg}" class="w-6 h-6 text-gray-400">
                 </li>
             </ol>
         </nav>
