--- a/src/main/resources/templates/fragments/common.html
+++ b/src/main/resources/templates/fragments/common.html
@@ -10,11 +10,11 @@
 <div class="flex flex-row" th:fragment="header">
     <div class="w-full mt-4 mx-4">
         <nav aria-label="Breadcrumb" class="flex">
-            <ol class="breadcrumbs inline-flex items-center space-x-1 md:space-x-3">
-                <img th:src="@{images/home.svg}" class="w-4 h-4 mr-2">
+            <ol class="breadcrumbs inline-flex items-center space-x-2">
+                <img th:src="@{images/home.svg}" class="w-4 h-4">
                 <li class="inline-flex items-center"
                     th:each="breadcrumbs : ${@breadcrumbsHelper.getBreadcrumbs(#httpServletRequest, @localeContextHolderWrapper)}">
-                    <a class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-gray-900 dark:text-gray-400 dark:hover:text-white"
+                    <a class="text-sm font-medium text-gray-700 hover:text-gray-900 dark:text-gray-400 dark:hover:text-white"
                        th:href="@{${breadcrumbs.getValue()}}" th:text="${breadcrumbs.getKey()}">
                     </a>
 <!--                    <svg class="w-6 h-6 text-gray-400" fill="currentColor" viewBox="0 0 20 20"-->
@@ -23,7 +23,7 @@
 <!--                              d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"-->
 <!--                              fill-rule="evenodd"></path>-->
 <!--                    </svg>-->
-                    <img th:src="@{images/arrow.svg}" class="w-6 h-6 text-gray-400">
+                    <img th:src="@{images/arrow.svg}" class="w-5 h-5">
                 </li>
             </ol>
         </nav>
