--- a/src/main/resources/templates/fragments/common.html
+++ b/src/main/resources/templates/fragments/common.html
@@ -11,7 +11,7 @@
     <div class="w-full mt-4 mx-4">
         <nav aria-label="Breadcrumb" class="flex">
             <ol class="breadcrumbs inline-flex items-center space-x-2">
-                <img th:src="@{images/home.svg}" class="w-4 h-4">
+                <img th:src="@{/images/home.svg}" class="w-4 h-4">
                 <li class="inline-flex items-center"
                     th:each="breadcrumbs : ${@breadcrumbsHelper.getBreadcrumbs(#httpServletRequest, @localeContextHolderWrapper)}">
                     <a class="text-sm font-medium text-gray-700 hover:text-gray-900 dark:text-gray-400 dark:hover:text-white"
@@ -23,7 +23,7 @@
 <!--                              d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"-->
 <!--                              fill-rule="evenodd"></path>-->
 <!--                    </svg>-->
-                    <img th:src="@{images/arrow.svg}" class="w-5 h-5">
+                    <img th:src="@{/images/arrow.svg}" class="w-5 h-5">
                 </li>
             </ol>
         </nav>
