--- a/src/main/resources/templates/fragments/common.html
+++ b/src/main/resources/templates/fragments/common.html
@@ -8,10 +8,10 @@
 <body>
 
 <div class="flex flex-row" th:fragment="header">
-    <div class="w-full mt-4 mx-4">
-        <nav aria-label="Breadcrumb" class="flex">
-            <ol class="breadcrumbs inline-flex items-center space-x-2">
-                <img th:src="@{/images/home.svg}" class="w-4 h-4">
+    <div class="w-full mt-4">
+        <nav aria-label="Breadcrumb" class="flex items-center">
+            <img th:src="@{/images/home.svg}" class="w-4 h-4 mx-2">
+            <ol class="breadcrumbs inline-flex items-center">
                 <li class="inline-flex items-center"
                     th:each="breadcrumbs : ${@breadcrumbsHelper.getBreadcrumbs(#httpServletRequest, @localeContextHolderWrapper)}">
                     <a class="text-sm font-medium text-gray-700 hover:text-gray-900 dark:text-gray-400 dark:hover:text-white"
